# hermes

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
assets/: settings-dialog.ps1
scripts/: install-startup.ps1  ptt_tooling.py
src/: app.rs  config.rs  main.rs  platform.rs  tooling.rs
src/app/: state.rs  streaming.rs
src/audio/: capture.rs
src/input/: hotkey.rs
src/output/: typing.rs
src/platform/: windows.rs
src/platform/windows/: settings_dialog.rs
src/stt/: engine.rs
