[package]
name = "hermes"
version = "0.1.0"
edition = "2021"
description = "Windows-first push-to-talk speech-to-text app built around local whisper.cpp inference"
license = "MIT"
readme = "README.md"
publish = false

[dependencies]
anyhow = "1.0"
clipboard-win = "5.4"
cpal = "0.15"
directories = "5.0"
hound = "3.5"
rdev = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tray-icon = "0.19"
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
